<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_candidate"
    android:icon="@drawable/ic_menu_candidate"
    android:title="@string/navigation_candidate_list" />

  <item
    android:id="@+id/navigation_party"
    android:icon="@drawable/ic_menu_party"
    android:title="@string/navigation_party_list" />

  <item
    android:id="@+id/navigation_how_to_vote"
    android:icon="@drawable/ic_menu_how_to_vote"
    android:title="@string/navigation_how_to_vote" />

  <item
    android:id="@+id/navigation_info"
    android:icon="@drawable/ic_menu_info"
    android:title="@string/navigation_tips" />

  <item
    android:id="@+id/navigation_vote_result"
    android:icon="@drawable/ic_menu_vote_result"
    android:title="@string/navigation_result" />

</menu>