<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/transparent"
  android:orientation="vertical">

  <com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginBottom="-24dp"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingStart="16dp"
      android:paddingTop="16dp"
      android:paddingEnd="16dp"
      android:paddingBottom="40dp">

      <TextView
        android:id="@+id/tvTitle"
        style="@style/TextTitle3.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_relaxed_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/tvMessage"
        style="@style/TextLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_relaxed_message"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


      <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOkay"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintVertical_bias="1.0" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/text_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonOkay"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintVertical_bias="1.0" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSkip"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/skip_update"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </com.google.android.material.card.MaterialCardView>

</FrameLayout>